# Agentx5CLIPYTHONVersion-Check

./: .replit  pyproject.toml  replit.md
agentx5/: cli.py  requirements.txt  run_all.sh  test_all.py  test_imports.py
agentx5/backend/: orchestrator.py  trading_agent.py
agentx5/backend/wallets/: wallet_manager.py
agentx5/database/: init_db.py  trading.db
agentx5/frontend/: simple_ui.py
attached_assets/: Pasted-Create-files-copy-paste-later-contents-I-provide-backen_1771252551020.txt
