[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
